social media check

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="col-xs-4" style="padding: 0px"><a id="map" href="sites/test.html"><img class="item_main" src="img/max/maps.gif"></a></div>
             </div>
             <div class="row">
-                <div class="col-xs-4" style="padding: 0px"><a href="#"><img class="item_main" src="img/max/news.gif"></a></div>
+                <div class="col-xs-4" style="padding: 0px"><a href="sites/news.html"><img class="item_main" src="img/max/news.gif"></a></div>
                 <div class="col-xs-4" style="padding: 0px"><a href="sites/info.html"><img class="item_main" src="img/max/info.gif"></a></div>
                 <div class="col-xs-4" style="padding: 0px"><a href="#"><img class="item_main" src="img/max/food.gif"></a></div>
             </div>
