--- a/sites/test.html
+++ b/sites/test.html
@@ -71,6 +71,8 @@
     </script>
 </head>
 <body>
-<div id="map-canvas"></div>
+    <div class="container-fluid" style="height: 250px; width: 250px">
+        <div id="map-canvas"></div>
+    </div>
 </body>
 </html>
