--- a/sites/test.html
+++ b/sites/test.html
@@ -4,6 +4,7 @@
     <title>Geolocation</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
+    <link rel="stylesheet" href="../css/styles.css" type="text/css" />
     <style>
         html, body, #map-canvas {
             height: 100%;
@@ -71,7 +72,12 @@
     </script>
 </head>
 <body>
-    <div class="container-fluid" style="height: 250px; width: 250px">
+
+
+    <div class="container-fluid maps_container">
+        <div class="col-xs-12 clocknav" style="margin-top: 10px; padding: 5px">
+            <a href="../index.html"><img class="clocknavbtn" src="../img/max/arrow_left.gif" style="height: 30px; width: 30px"></a>
+        </div>
         <div id="map-canvas"></div>
     </div>
 </body>
