--- a/sites/news.html
+++ b/sites/news.html
@@ -47,6 +47,11 @@
         <button class="col-xs-12 btn btn-primary" type="button" data-toggle="collapse" data-target="#col_home" aria-expanded="false" style="margin-bottom: 5px">
             Homepage & Feedback
         </button>
+        <div class="col-xs-12 collapse" id="col_home">
+            <div class="well" style="text-align: center; background-color: rgba(201, 201, 201, 0.7);">
+
+            </div>
+        </div>
     </div>
 
 </body>
