new method for collapse

--- a/sites/news.html
+++ b/sites/news.html
@@ -29,6 +29,19 @@
             <a href="../index.html"><img class="clocknavbtn" src="../img/max/arrow_left.gif" style="height: 30px; width: 30px"></a>
         </div>
 
+        <input type="button" onclick="growDiv()" value="Social Media" id="social_btn" style="margin-top: 10px; margin-bottom: 10px">
+        <div id="grow">
+            <div class="measWrapper">
+                <div class="text" style="padding-bottom: 10px">
+                    <a href="https://www.youtube.com/channel/UC1yhsZ5dZUEJHVkr5opPT-g"><button class="btn btn-info" type="button"><img src="../img/max/youtube.gif" style="height: 25px; width: 25px"/></button></a>
+                    <a href="https://www.facebook.com/electriclovefestival"><button class="btn btn-info" type="button"><img src="../img/max/facebook.gif" style="height: 25px; width: 25px"/></button></a>
+                    <a href="https://twitter.com/electricloveaut"><button class="btn btn-info" type="button"><img src="../img/max/twitter.gif" style="height: 25px; width: 25px"/></button></a>
+                </div>
+            </div>
+        </div>
+
+
+        <!--
         <button class="col-xs-12 btn btn-primary" type="button" data-toggle="collapse" data-target="#col_social" aria-expanded="false" style="margin-bottom: 5px">
             Social Media
         </button>
@@ -39,6 +52,7 @@
                 <a href="https://twitter.com/electricloveaut"><button class="btn btn-info" type="button"><img src="../img/max/twitter.gif" style="height: 25px; width: 25px"/></button></a>
             </div>
         </div>
+        -->
 
         <button class="col-xs-12 btn btn-primary" type="button" data-toggle="collapse" data-target="#col_gallery" aria-expanded="false" style="margin-bottom: 5px">
             Gallery
