--- a/sites/news.html
+++ b/sites/news.html
@@ -41,6 +41,16 @@
         </div>
 
 
+        <div id="nav">
+            <h2>Contents</h2>
+            <a href="#" class="hide">[hide]</a>
+            <a href="#" class="show">[show]</a>
+            <ol id="menu">
+                <li><a href="#sec2">Real-world issues</a></li>
+                
+            </ol>
+        </div>
+
         <!--
         <button class="col-xs-12 btn btn-primary" type="button" data-toggle="collapse" data-target="#col_social" aria-expanded="false" style="margin-bottom: 5px">
             Social Media
