new method for collapse

--- a/sites/news.html
+++ b/sites/news.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../css/bootstrap-theme.min.css" type="text/css"/>
     <link rel="stylesheet" href="../css/bootstrap.css" type="text/css"/>
     <link rel="stylesheet" href="../css/normalize.css" type="text/css"/>
-    <link rel="stylesheet" href="../css/styles.css" type="text/css"/>
+    <link rel="stylesheet" href="../css/tmp.css" type="text/css"/>
 
 
     <title>Electric Love Festival</title>
@@ -29,27 +29,29 @@
             <a href="../index.html"><img class="clocknavbtn" src="../img/max/arrow_left.gif" style="height: 30px; width: 30px"></a>
         </div>
 
-        <input type="button" onclick="growDiv()" value="Social Media" id="social_btn" style="margin-top: 10px; margin-bottom: 10px">
-        <div id="grow">
-            <div class="measWrapper">
-                <div class="text" style="padding-bottom: 10px">
-                    <a href="https://www.youtube.com/channel/UC1yhsZ5dZUEJHVkr5opPT-g"><button class="btn btn-info" type="button"><img src="../img/max/youtube.gif" style="height: 25px; width: 25px"/></button></a>
-                    <a href="https://www.facebook.com/electriclovefestival"><button class="btn btn-info" type="button"><img src="../img/max/facebook.gif" style="height: 25px; width: 25px"/></button></a>
-                    <a href="https://twitter.com/electricloveaut"><button class="btn btn-info" type="button"><img src="../img/max/twitter.gif" style="height: 25px; width: 25px"/></button></a>
-                </div>
-            </div>
+        <div class="accordion vertical">
+            <section id="vertabout">
+                <h2><a href="#vertabout">About Us</a></h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse id lobortis massa. Nunc viverra velit leo, sit amet elementum mi. Fusce posuere nunc a mi tempus malesuada. Curabitur facilisis rhoncus eros eget placerat. Aliquam semper mauris sit amet justo tempor nec lacinia magna molestie. Etiam placerat congue dolor vitae adipiscing. Aliquam ac erat lorem, ut iaculis justo. Etiam mattis dignissim gravida. Aliquam nec justo ante, non semper mi. Nulla consectetur interdum massa, vel porta enim vulputate sed. Maecenas elit quam, egestas eget placerat non, fringilla vel eros. Nam vehicula elementum nulla sed consequat. Phasellus eu erat enim. Praesent at magna non massa dapibus scelerisque in eu lorem.</p>
+            </section>
+            <section id="vertservices">
+                <h2><a href="#vertservices">Services</a></h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse id lobortis massa. Nunc viverra velit leo, sit amet elementum mi. Fusce posuere nunc a mi tempus malesuada. Curabitur facilisis rhoncus eros eget placerat. Aliquam semper mauris sit amet justo tempor nec lacinia magna molestie. Etiam placerat congue dolor vitae adipiscing. Aliquam ac erat lorem, ut iaculis justo. Etiam mattis dignissim gravida. Aliquam nec justo ante, non semper mi. Nulla consectetur interdum massa, vel porta enim vulputate sed. Maecenas elit quam, egestas eget placerat non, fringilla vel eros. Nam vehicula elementum nulla sed consequat. Phasellus eu erat enim. Praesent at magna non massa dapibus scelerisque in eu lorem.</p>
+            </section>
+            <section id="vertblog">
+                <h2><a href="#vertblog">Blog</a></h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse id lobortis massa. Nunc viverra velit leo, sit amet elementum mi. Fusce posuere nunc a mi tempus malesuada. Curabitur facilisis rhoncus eros eget placerat. Aliquam semper mauris sit amet justo tempor nec lacinia magna molestie. Etiam placerat congue dolor vitae adipiscing. Aliquam ac erat lorem, ut iaculis justo. Etiam mattis dignissim gravida. Aliquam nec justo ante, non semper mi. Nulla consectetur interdum massa, vel porta enim vulputate sed. Maecenas elit quam, egestas eget placerat non, fringilla vel eros. Nam vehicula elementum nulla sed consequat. Phasellus eu erat enim. Praesent at magna non massa dapibus scelerisque in eu lorem.</p>
+            </section>
+            <section id="vertportfolio">
+                <h2><a href="#vertportfolio">Portfolio</a></h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse id lobortis massa. Nunc viverra velit leo, sit amet elementum mi. Fusce posuere nunc a mi tempus malesuada. Curabitur facilisis rhoncus eros eget placerat. Aliquam semper mauris sit amet justo tempor nec lacinia magna molestie. Etiam placerat congue dolor vitae adipiscing. Aliquam ac erat lorem, ut iaculis justo. Etiam mattis dignissim gravida. Aliquam nec justo ante, non semper mi. Nulla consectetur interdum massa, vel porta enim vulputate sed. Maecenas elit quam, egestas eget placerat non, fringilla vel eros. Nam vehicula elementum nulla sed consequat. Phasellus eu erat enim. Praesent at magna non massa dapibus scelerisque in eu lorem.</p>
+            </section>
+            <section id="vertcontact">
+                <h2><a href="#vertcontact">Contact</a></h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse id lobortis massa. Nunc viverra velit leo, sit amet elementum mi. Fusce posuere nunc a mi tempus malesuada. Curabitur facilisis rhoncus eros eget placerat. Aliquam semper mauris sit amet justo tempor nec lacinia magna molestie. Etiam placerat congue dolor vitae adipiscing. Aliquam ac erat lorem, ut iaculis justo. Etiam mattis dignissim gravida. Aliquam nec justo ante, non semper mi. Nulla consectetur interdum massa, vel porta enim vulputate sed. Maecenas elit quam, egestas eget placerat non, fringilla vel eros. Nam vehicula elementum nulla sed consequat. Phasellus eu erat enim. Praesent at magna non massa dapibus scelerisque in eu lorem.</p>
+            </section>
         </div>
 
-
-        <div id="nav">
-            <h2>Contents</h2>
-            <a href="#" class="hide">[hide]</a>
-            <a href="#" class="show">[show]</a>
-            <ol id="menu">
-                <li><a href="#sec2">Real-world issues</a></li>
-                
-            </ol>
-        </div>
 
         <!--
         <button class="col-xs-12 btn btn-primary" type="button" data-toggle="collapse" data-target="#col_social" aria-expanded="false" style="margin-bottom: 5px">
@@ -64,9 +66,6 @@
         </div>
         -->
 
-        <button class="col-xs-12 btn btn-primary" type="button" data-toggle="collapse" data-target="#col_gallery" aria-expanded="false" style="margin-bottom: 5px">
-            Gallery
-        </button>
 
         <button class="col-xs-12 btn btn-primary" type="button" data-toggle="collapse" data-target="#col_home" aria-expanded="false" style="margin-bottom: 5px">
             Homepage & Feedback
