--- a/sites/news.html
+++ b/sites/news.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="../css/bootstrap.css" type="text/css"/>
     <link rel="stylesheet" href="../css/normalize.css" type="text/css"/>
     <link rel="stylesheet" href="../css/tmp.css" type="text/css"/>
+    <link rel="stylesheet" href="../css/styles.css" type="text/css"/>
 
 
     <title>Electric Love Festival</title>
@@ -30,50 +31,30 @@
         </div>
 
         <div class="accordion vertical">
-            <section id="vertabout">
-                <h2><a href="#vertabout">About Us</a></h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse id lobortis massa. Nunc viverra velit leo, sit amet elementum mi. Fusce posuere nunc a mi tempus malesuada. Curabitur facilisis rhoncus eros eget placerat. Aliquam semper mauris sit amet justo tempor nec lacinia magna molestie. Etiam placerat congue dolor vitae adipiscing. Aliquam ac erat lorem, ut iaculis justo. Etiam mattis dignissim gravida. Aliquam nec justo ante, non semper mi. Nulla consectetur interdum massa, vel porta enim vulputate sed. Maecenas elit quam, egestas eget placerat non, fringilla vel eros. Nam vehicula elementum nulla sed consequat. Phasellus eu erat enim. Praesent at magna non massa dapibus scelerisque in eu lorem.</p>
+            <section id="socialMedia">
+                <h2><a href="#socialMedia">Social Media</a></h2>
+                <h3>Visit us on: </h3>
+                <span><a href="https://www.youtube.com/channel/UC1yhsZ5dZUEJHVkr5opPT-g"><img src="../img/max/youtube.gif" class="img_accordion"/></a> </span>
+                <span><a href="https://twitter.com/electricloveaut"><img src="../img/max/twitter.gif" class="img_accordion"/></a> </span>
+                <span><a href="https://www.facebook.com/electriclovefestival"><img src="../img/max/facebook.gif" class="img_accordion"/></a> </span>
             </section>
-            <section id="vertservices">
-                <h2><a href="#vertservices">Services</a></h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse id lobortis massa. Nunc viverra velit leo, sit amet elementum mi. Fusce posuere nunc a mi tempus malesuada. Curabitur facilisis rhoncus eros eget placerat. Aliquam semper mauris sit amet justo tempor nec lacinia magna molestie. Etiam placerat congue dolor vitae adipiscing. Aliquam ac erat lorem, ut iaculis justo. Etiam mattis dignissim gravida. Aliquam nec justo ante, non semper mi. Nulla consectetur interdum massa, vel porta enim vulputate sed. Maecenas elit quam, egestas eget placerat non, fringilla vel eros. Nam vehicula elementum nulla sed consequat. Phasellus eu erat enim. Praesent at magna non massa dapibus scelerisque in eu lorem.</p>
+            <section id="news">
+                <h2><a href="#news">News</a></h2>
+                <p></p>
             </section>
-            <section id="vertblog">
-                <h2><a href="#vertblog">Blog</a></h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse id lobortis massa. Nunc viverra velit leo, sit amet elementum mi. Fusce posuere nunc a mi tempus malesuada. Curabitur facilisis rhoncus eros eget placerat. Aliquam semper mauris sit amet justo tempor nec lacinia magna molestie. Etiam placerat congue dolor vitae adipiscing. Aliquam ac erat lorem, ut iaculis justo. Etiam mattis dignissim gravida. Aliquam nec justo ante, non semper mi. Nulla consectetur interdum massa, vel porta enim vulputate sed. Maecenas elit quam, egestas eget placerat non, fringilla vel eros. Nam vehicula elementum nulla sed consequat. Phasellus eu erat enim. Praesent at magna non massa dapibus scelerisque in eu lorem.</p>
+            <section id="blog">
+                <h2><a href="#blog">Blog</a></h2>
+                <p></p>
             </section>
-            <section id="vertportfolio">
-                <h2><a href="#vertportfolio">Portfolio</a></h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse id lobortis massa. Nunc viverra velit leo, sit amet elementum mi. Fusce posuere nunc a mi tempus malesuada. Curabitur facilisis rhoncus eros eget placerat. Aliquam semper mauris sit amet justo tempor nec lacinia magna molestie. Etiam placerat congue dolor vitae adipiscing. Aliquam ac erat lorem, ut iaculis justo. Etiam mattis dignissim gravida. Aliquam nec justo ante, non semper mi. Nulla consectetur interdum massa, vel porta enim vulputate sed. Maecenas elit quam, egestas eget placerat non, fringilla vel eros. Nam vehicula elementum nulla sed consequat. Phasellus eu erat enim. Praesent at magna non massa dapibus scelerisque in eu lorem.</p>
+            <section id="homepage">
+                <h2><a href="#homepage">Homepage</a></h2>
+                <p>Stay tuned and checkout our homepage!</p>
+                <p><a href="https://electriclove.at"><img src="../img/logo_name_black.gif"></a></p>
             </section>
-            <section id="vertcontact">
-                <h2><a href="#vertcontact">Contact</a></h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse id lobortis massa. Nunc viverra velit leo, sit amet elementum mi. Fusce posuere nunc a mi tempus malesuada. Curabitur facilisis rhoncus eros eget placerat. Aliquam semper mauris sit amet justo tempor nec lacinia magna molestie. Etiam placerat congue dolor vitae adipiscing. Aliquam ac erat lorem, ut iaculis justo. Etiam mattis dignissim gravida. Aliquam nec justo ante, non semper mi. Nulla consectetur interdum massa, vel porta enim vulputate sed. Maecenas elit quam, egestas eget placerat non, fringilla vel eros. Nam vehicula elementum nulla sed consequat. Phasellus eu erat enim. Praesent at magna non massa dapibus scelerisque in eu lorem.</p>
+            <section id="contact">
+                <h2><a href="#contact">Contact</a></h2>
+                <p></p>
             </section>
-        </div>
-
-
-        <!--
-        <button class="col-xs-12 btn btn-primary" type="button" data-toggle="collapse" data-target="#col_social" aria-expanded="false" style="margin-bottom: 5px">
-            Social Media
-        </button>
-        <div class="col-xs-12 collapse" id="col_social">
-            <div class="well" style="text-align: center; background-color: rgba(201, 201, 201, 0.7);">
-                <a href="https://www.youtube.com/channel/UC1yhsZ5dZUEJHVkr5opPT-g"><button class="btn btn-info" type="button"><img src="../img/max/youtube.gif" style="height: 25px; width: 25px"/></button></a>
-                <a href="https://www.facebook.com/electriclovefestival"><button class="btn btn-info" type="button"><img src="../img/max/facebook.gif" style="height: 25px; width: 25px"/></button></a>
-                <a href="https://twitter.com/electricloveaut"><button class="btn btn-info" type="button"><img src="../img/max/twitter.gif" style="height: 25px; width: 25px"/></button></a>
-            </div>
-        </div>
-        -->
-
-
-        <button class="col-xs-12 btn btn-primary" type="button" data-toggle="collapse" data-target="#col_home" aria-expanded="false" style="margin-bottom: 5px">
-            Homepage & Feedback
-        </button>
-        <div class="col-xs-12 collapse" id="col_home">
-            <div class="well" style="text-align: center; background-color: rgba(201, 201, 201, 0.7);">
-
-            </div>
         </div>
     </div>
 
