--- a/sites/countdown.html
+++ b/sites/countdown.html
@@ -26,7 +26,7 @@
 <div id="everything" class="container">
     <div id="main" class="element">
         <div class="col-xs-12 clocknav">
-            <a href="../index.html"><img class="clocknavbtn" src="../img/max/arrow_left.gif" style="height: 30px; width: 30px"></a>
+            <a href="../index.html"><img class="clocknavbtn" src="../img/max/arrow_left_home.gif" style="height: 30px; width: 152px"></a>
         </div>
         <div class="countdown clocktext">TIME LEFT TILL<br>ELF 15
             <div class="clockbox" id="clock"></div>
