--- a/sites/news.html
+++ b/sites/news.html
@@ -27,7 +27,7 @@
 
     <div id="everything" class="content-info" style="padding: 5px; text-align: center">
         <div class="col-xs-12 clocknav">
-            <a href="../index.html"><img class="clocknavbtn" src="../img/max/arrow_left.gif" style="height: 30px; width: 30px"></a>
+            <a href="../index.html"><img class="clocknavbtn" src="../img/max/arrow_left_home.gif" style="height: 30px; width: 152px"></a>
         </div>
 
         <div class="accordion vertical">
@@ -38,22 +38,41 @@
                 <span><a href="https://twitter.com/electricloveaut"><img src="../img/max/twitter.gif" class="img_accordion"/></a> </span>
                 <span><a href="https://www.facebook.com/electriclovefestival"><img src="../img/max/facebook.gif" class="img_accordion"/></a> </span>
             </section>
+            <section id="faq">
+                <h2><a href="#faq">FAQ</a></h2>
+                <div class="row btn_row" style="margin-bottom: 10px">
+                    <div class="col-xs-6" style="padding-right: 5px">
+                        <button class="btn_style">Camping</button>
+                    </div>
+
+                    <div class="col-xs-6" style="padding-left: 5px">
+                        <button class="btn_style">Travel</button>
+                    </div>
+                </div>
+                <div class="row btn_row">
+                    <div class="col-xs-6" style="padding-right: 5px">
+                        <button class="btn_style">Festival</button>
+                    </div>
+
+                    <div class="col-xs-6" style="padding-left: 5px">
+                        <button class="btn_style">Tickets</button>
+                    </div>
+                </div>
+            </section>
             <section id="news">
                 <h2><a href="#news">News</a></h2>
-                <p></p>
-            </section>
-            <section id="blog">
-                <h2><a href="#blog">Blog</a></h2>
                 <p></p>
             </section>
             <section id="homepage">
                 <h2><a href="#homepage">Homepage</a></h2>
                 <p>Stay tuned and checkout our homepage!</p>
-                <p><a href="https://electriclove.at"><img src="../img/logo_name_black.gif"></a></p>
+                <p><a href="https://electriclove.at"><img src="../img/logo_name_black.gif" style="height: 45px; width: 211px;"></a></p>
             </section>
             <section id="contact">
                 <h2><a href="#contact">Contact</a></h2>
-                <p></p>
+                <p>Telephone: +43 (0)6245 71 990</p>
+                <p>Fax: +43 (0)6245 70 79 366</p>
+                <p>E-Mail: info@revolutionevent.com</p>
             </section>
         </div>
     </div>
