--- a/sites/artists.html
+++ b/sites/artists.html
@@ -26,7 +26,7 @@
 <body>
 
     <div id="everything" class="content-info" style="padding: 5px">
-        <div class="col-xs-12 clocknav">
+        <div class="col-xs-12 header_back">
                 <a href="../index.html"><img class="clocknavbtn" src="../img/max/arrow_left.gif" style="height: 30px; width: 30px"></a>
         </div>
         <form action="rules.html">
