--- a/sites/news.html
+++ b/sites/news.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../css/bootstrap-theme.min.css" type="text/css"/>
     <link rel="stylesheet" href="../css/bootstrap.css" type="text/css"/>
     <link rel="stylesheet" href="../css/normalize.css" type="text/css"/>
-    <link rel="stylesheet" href="../css/tmp.css" type="text/css"/>
+    <link rel="stylesheet" href="../css/news.css" type="text/css"/>
     <link rel="stylesheet" href="../css/styles.css" type="text/css"/>
 
 
@@ -26,37 +26,37 @@
 <body>
 
     <div id="everything" class="content-info" style="padding: 5px; text-align: center">
-        <div class="col-xs-12 clocknav">
+        <div class="col-xs-12 header_back">
             <a href="../index.html"><img class="clocknavbtn" src="../img/max/arrow_left_home.gif" style="height: 30px; width: 152px"></a>
         </div>
 
         <div class="accordion vertical">
             <section id="socialMedia">
                 <h2><a href="#socialMedia">Social Media</a></h2>
-                <h3>Visit us on: </h3>
+                <p>Visit us on:</p>
                 <span><a href="https://www.youtube.com/channel/UC1yhsZ5dZUEJHVkr5opPT-g"><img src="../img/max/youtube.gif" class="img_accordion"/></a> </span>
                 <span><a href="https://twitter.com/electricloveaut"><img src="../img/max/twitter.gif" class="img_accordion"/></a> </span>
                 <span><a href="https://www.facebook.com/electriclovefestival"><img src="../img/max/facebook.gif" class="img_accordion"/></a> </span>
             </section>
             <section id="faq">
                 <h2><a href="#faq">FAQ</a></h2>
-                <div class="row btn_row" style="margin-bottom: 10px">
-                    <div class="col-xs-6" style="padding-right: 5px">
-                        <button class="btn_style">Camping</button>
-                    </div>
+                <div class="row btn_row">
 
-                    <div class="col-xs-6" style="padding-left: 5px">
-                        <button class="btn_style">Travel</button>
-                    </div>
+                    <form action="faqSites/camping.html" class="col-xs-6" style="padding-right: 5px">
+                        <button class="btn_style">Camping</button>
+                    </form>
+                    <form action="faqSites/festival.html" class="col-xs-6" style="padding-right: 5px">
+                        <button class="btn_style">Festival</button>
+                    </form>
                 </div>
                 <div class="row btn_row">
-                    <div class="col-xs-6" style="padding-right: 5px">
-                        <button class="btn_style">Festival</button>
-                    </div>
-
-                    <div class="col-xs-6" style="padding-left: 5px">
+                    <form action="faqSites/travel.html" class="col-xs-6" style="padding-right: 5px">
+                        <button class="btn_style">Travel</button>
+                    </form>
+                    <form action="faqSites/tickets.html" class="col-xs-6" style="padding-right: 5px">
                         <button class="btn_style">Tickets</button>
-                    </div>
+                    </form>
+
                 </div>
             </section>
             <section id="news">
