--- a/sites/countdown.html
+++ b/sites/countdown.html
@@ -25,7 +25,7 @@
 <body>
 <div id="everything" class="container">
     <div id="main" class="element">
-        <div class="col-xs-12 clocknav">
+        <div class="col-xs-12 header_back">
             <a href="../index.html"><img class="clocknavbtn" src="../img/max/arrow_left_home.gif" style="height: 30px; width: 152px"></a>
         </div>
         <div class="countdown clocktext">TIME LEFT TILL<br>ELF 15
