--- a/sites/test.html
+++ b/sites/test.html
@@ -76,7 +76,7 @@
 
 
     <div class="container-fluid maps_container">
-        <div class="col-xs-12 clocknav" style="margin-top: 10px; padding: 5px">
+        <div class="col-xs-12 header_back" style="margin-top: 10px; padding: 5px">
             <a href="../index.html"><img class="clocknavbtn" src="../img/max/arrow_left.gif" style="height: 30px; width: 30px"></a>
         </div>
         <div id="map-canvas"></div>
