--- a/sites/countdown.html
+++ b/sites/countdown.html
@@ -25,8 +25,8 @@
 <body>
 <div id="everything" class="container">
     <div id="main" class="element">
-        <div class="col-xs-12 header_back">
-            <a href="../index.html"><img class="clocknavbtn" src="../img/max/arrow_left_home.gif" style="height: 30px; width: 152px"></a>
+        <div class="col-xs-12 header_back"  onclick="history.go(-1);return true;">
+            <img class="clocknavbtn" src="../img/max/arrow_left_home.gif" style="height: 30px; width: 152px">
         </div>
         <div class="countdown clocktext">TIME LEFT TILL<br>ELF 15
             <div class="clockbox" id="clock"></div>
