--- a/sites/faqSites/festival.html
+++ b/sites/faqSites/festival.html
@@ -27,7 +27,7 @@
 <div id="everything" class="content-info" style="padding: 5px; text-align: center">
 
     <div class="col-xs-12 header_back" onclick="history.go(-1);return true;">
-        <a href="../../index.html"><img src="../../img/max/arrow_left_home.gif" style="height: 30px; width: 152px"></a>
+        <img src="../../img/max/arrow_left_home.gif" style="height: 30px; width: 152px">
     </div>
     <div class="col-xs-12 header_title">
         FESTIVAL - QUESTIONS and ANSWERS
