--- a/sites/news.html
+++ b/sites/news.html
@@ -26,8 +26,8 @@
 <body>
 
     <div id="everything" class="content-info" style="padding: 5px; text-align: center">
-        <div class="col-xs-12 header_back">
-            <a href="../index.html"><img class="clocknavbtn" src="../img/max/arrow_left_home.gif" style="height: 30px; width: 152px"></a>
+        <div class="col-xs-12 header_back"  onclick="history.go(-1);return true;">
+            <img class="clocknavbtn" src="../img/max/arrow_left_home.gif" style="height: 30px; width: 152px">
         </div>
 
         <div class="accordion vertical">
