--- a/sites/artists.html
+++ b/sites/artists.html
@@ -26,8 +26,8 @@
 <body>
 
     <div id="everything" class="content-info" style="padding: 5px">
-        <div class="col-xs-12 header_back">
-                <a href="../index.html"><img class="clocknavbtn" src="../img/max/arrow_left.gif" style="height: 30px; width: 30px"></a>
+        <div class="col-xs-12 header_back"  onclick="history.go(-1);return true;">
+                <img class="clocknavbtn" src="../img/max/arrow_left.gif" style="height: 30px; width: 30px">
         </div>
         <form action="rules.html">
                <button class="btn-info col-xs-12 btn_infohtml">Click me</button>
