--- a/sites/faqSites/travel.html
+++ b/sites/faqSites/travel.html
@@ -27,7 +27,7 @@
 <div id="everything" class="content-info" style="padding: 5px; text-align: center">
 
     <div class="col-xs-12 header_back" onclick="history.go(-1);return true;">
-        <img src="../../img/max/arrow_left_home.gif" style="height: 30px; width: 152px">
+        <img src="../../img/max/arrow_left.gif" style="height: 30px; width: 30px">
     </div>
     <div class="col-xs-12 header_title">
         TRAVEL - QUESTIONS and ANSWERS
