camping faq finished

--- a/sites/faqSites/camping.html
+++ b/sites/faqSites/camping.html
@@ -25,14 +25,51 @@
 <body>
 
     <div id="everything" class="content-info" style="padding: 5px; text-align: center">
-
-            <div class="col-xs-12 header_back" onclick="history.go(-1);return true;">
-               <img src="../../img/max/arrow_left.gif" style="height: 30px; width: 30px">
+        <div class="row" style="padding: 0px; margin: 0px">
+            <div class="col-xs-4 header_back" onclick="history.go(-1);return true;">
+               <img src="../../img/max/arrow_left_back.gif" style="height: 30px; width: 86px">
             </div>
-            <div class="col-xs-12 header_title">
-                some frequently asked questions about camping
+            <div class="col-xs-4 header_back header_title" style="text-align: center">CAMPING</div>
+            <div class="col-xs-4 header_back"></div>
 
-            </div>
+        </div>
+
+        <div class="faq_text">
+            <h3 style="margin-top: 5px">Camping Rules</h3>
+            The following things are not allowed on the camp site:
+            <hr>
+            <h3>Food & Drinks at the Camping Site</h3>
+            You´re hungry? That´s no problem. There are loads of different Electric Food Bars all over the area.<br>
+
+           <i>Electric Greenfield Market</i><br>
+            Supermarket with everything a camper needs like sleeping bags, mats, cold drinks aso.<br>
+
+            <i>Electric Love Breakfast</i><br>
+            Need a good hangover breakfast? You will get it there!
+            <hr>
+            <h3>Garbage Deposit</h3>
+            To realise our goal "the cleanest festival in Austria" we need your help.
+            We will ask you for a deposit of € 15,00 at the camping entrance for which you will receive a garbage chip. If you bring back a fully filled trash bag and the chip to the exit the desposit will be given back to you.
+            Trash bags are available at Info/Lost&Found Stands & the exit.
+            <hr>
+            <h3>Groups</h3>
+            If you want to camp as a group please arrive as a group and accept that the security staff is not in charge to merge groups on camping site.
+            <hr>
+            <h3>Opening Hours</h3>
+            Greenfield Camping is open from Wednesday until Sunday:<br>
+            Wednesday: 12h00 – 24h00<br>
+            Thursday: 00h00 – 24h00<br>
+            Friday: 00h00 – 24h00<br>
+            Saturday: 00h00 – 24h00<br>
+            Sunday: 00h00 – 12h00
+            <hr>
+            <h3>Toilets / Sanitary Facilities</h3>
+            Using toilets & showers at the Electric Love Festival is free of charge
+            <hr>
+            <h3>Valuable Articles</h3>
+            You can store your valuable belongings in our lockers without having to worry about loss or theft. We ask for a small contribution for hiring.
+        </div>
+
 
     </div>
 
