--- a/sites/faqSites/travel.html
+++ b/sites/faqSites/travel.html
@@ -26,16 +26,55 @@
 
 <div id="everything" class="content-info" style="padding: 5px; text-align: center">
 
-    <div class="col-xs-12 header_back" onclick="history.go(-1);return true;">
-        <img src="../../img/max/arrow_left.gif" style="height: 30px; width: 30px">
+    <div class="row" style="padding: 0px; margin: 0px">
+        <div class="col-xs-4 header_back" onclick="history.go(-1);return true;">
+            <img src="../../img/max/arrow_left_back.gif" style="height: 30px; width: 86px">
+        </div>
+        <div class="col-xs-4 header_back header_title" style="text-align: center">TRAVEL</div>
+        <div class="col-xs-4 header_back"></div>
     </div>
-    <div class="col-xs-12 header_title">
-        TRAVEL - QUESTIONS and ANSWERS
+
+        <div class="faq_text">
+            <h3 style="margin-top: 5px">CAR</h3>
+            <p><b>Visitors from Austria</b></p>
+
+            <p><i>Autobahn (Highway) A1 from Vienna/Innsbruck/Salzburg</i><br></p>
+            Exit Thalgau – route to Hof, in the roundabout first exit direction Salzburg. From there you´ll see
+            information signs which will guide you to your destination. Please mind the different colors for the different areas.<br></p>
+
+            <p><i>Autobahn (Highway) A10 from Kärnten (Carinthia) / Italy</i><br></p>
+            <p>Exit Hallein – route to Adnet/Ebenau/Salzburgring. Just follow the road and you´ll be fine.<br></p>
+
+           <p><b>Visitors from Germany</b><br></p>
+
+            <p>With Vignette (road tax sticker on your car, can be bought on e.g. gas stations)<br></p>
+
+            <p><i>Autobahn (Highway) A8 from Munich to Autobahn (Highway) A1 route Vienna</i><br></p>
+            <p>Exit Thalgau – route to Hof, in the roundabout first exit direction Salzburg. From there you´ll see information
+            signs which will guide you to your destination. Please mind the different colors for the different areas.<br></p>
+
+            <p>Without Vignette (road tax sticker on your car, can be bought on e.g. Gas stations)<br></p>
+
+            <p><i>Autobahn (Highway) A8 from Munich</i><br></p>
+            <p>Exit Piding – route Freilassing and further Salzburg
+            when you pass the placename sign “Salzburg” you have to drive on the B 155, further to the B1. Watch out for the information sisgns and
+            mind the different colors for the different areas.</p>
+            <hr>
+            <h3 style="margin-top: 5px">PLANE</h3>
+            <p>There are several direct flights from european cities to Salzburg airport. Check them out on
+                <b><a href="http://www.salzburg-airport.com/en/" style="color: #ffffff">www.salzburg-airport.com</a></b></p>
+            <hr>
+            <h3>BUS</h3>
+            <p>Some travel organisations offer a full service trip by bus to the Electric Love Festival. Details tba.<br>
+
+            You want to organise such a bus trip yourself? Send us an e-mail: <br>
+            <b>info@electriclove.at</b></p>
+            <hr>
+            <h3>TRAIN</h3>
+            <p>Get to Salzburg Main Station and there are shuttle buses waiting for you to pick you up and get you to Electric Love Festival.</p>
+        </div>
 
     </div>
-
-</div>
-
 </body>
 
 </html>
