--- a/sites/faqSites/tickets.html
+++ b/sites/faqSites/tickets.html
@@ -34,6 +34,18 @@
     </div>
 
 
+    <div>
+       <input type="checkbox" id="wusel">
+        <h2><label for="wusel">Help me</label></h2>
+
+        <p>Hier ist mein text der aufklappen solllPellentesque habitant morbi tristique
+            senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam,
+            feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet
+            quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+
+    </div>
+
+
     <label class="collapse" for="1">Collapse 2</label>
     <input id="1" type="checkbox">
     <div class="test">Content 1</div>
