camping/traveling with collapse

--- a/sites/faqSites/camping.html
+++ b/sites/faqSites/camping.html
@@ -34,41 +34,49 @@
 
         </div>
 
-        <div class="faq_text">
-            <h3 style="margin-top: 5px">Camping Rules</h3>
-            The following things are not allowed on the camp site:
-            <hr>
-            <h3>Food & Drinks at the Camping Site</h3>
-            You´re hungry? That´s no problem. There are loads of different Electric Food Bars all over the area.<br>
+        <label class="collapse" for="rules">Camping Rules</label>
+        <input id="rules" type="checkbox">
+        <div class="text_shown">The following things are not allowed on the camp site:</div>
 
-           <i>Electric Greenfield Market</i><br>
+        <label class="collapse" for="food">Food and Drinks at the Camping Site</label>
+        <input id="food" type="checkbox">
+        <div class="text_shown">You´re hungry? That´s no problem. There are loads of different Electric Food Bars all over the area.<br>
+            <hr>
+            <i>Electric Greenfield Market</i><br>
             Supermarket with everything a camper needs like sleeping bags, mats, cold drinks aso.<br>
-
+            <hr>
             <i>Electric Love Breakfast</i><br>
-            Need a good hangover breakfast? You will get it there!
-            <hr>
-            <h3>Garbage Deposit</h3>
-            To realise our goal "the cleanest festival in Austria" we need your help.
-            We will ask you for a deposit of € 15,00 at the camping entrance for which you will receive a garbage chip. If you bring back a fully filled trash bag and the chip to the exit the desposit will be given back to you.
-            Trash bags are available at Info/Lost&Found Stands & the exit.
-            <hr>
-            <h3>Groups</h3>
-            If you want to camp as a group please arrive as a group and accept that the security staff is not in charge to merge groups on camping site.
-            <hr>
-            <h3>Opening Hours</h3>
-            Greenfield Camping is open from Wednesday until Sunday:<br>
-            Wednesday: 12h00 – 24h00<br>
+            Need a good hangover breakfast? You will get it there!</div>
+
+        <label class="collapse" for="garbage">Garbage Deposit</label>
+        <input id="garbage" type="checkbox">
+        <div class="text_shown">To realise our goal "the cleanest festival in Austria" we need your help.
+            We will ask you for a deposit of € 15,00 at the camping entrance for which you will
+            receive a garbage chip. If you bring back a fully filled trash bag and the chip to the exit the
+            desposit will be given back to you. Trash bags are available at Info/Lost&Found Stands & the exit.</div>
+
+        <label class="collapse" for="groups">Groups</label>
+        <input id="groups" type="checkbox">
+        <div class="text_shown">If you want to camp as a group please arrive as a
+            group and accept that the security staff is not in charge to merge groups on camping site.</div>
+
+        <label class="collapse" for="opening">Opening Hours</label>
+        <input id="opening" type="checkbox">
+        <div class="text_shown">Greenfield Camping is open from Wednesday until Sunday:<br>
+            <hr>Wednesday: 12h00 – 24h00<br>
             Thursday: 00h00 – 24h00<br>
             Friday: 00h00 – 24h00<br>
             Saturday: 00h00 – 24h00<br>
-            Sunday: 00h00 – 12h00
-            <hr>
-            <h3>Toilets / Sanitary Facilities</h3>
-            Using toilets & showers at the Electric Love Festival is free of charge
-            <hr>
-            <h3>Valuable Articles</h3>
-            You can store your valuable belongings in our lockers without having to worry about loss or theft. We ask for a small contribution for hiring.
-        </div>
+            Sunday: 00h00 – 12h00</div>
+
+        <label class="collapse" for="toilet">Toilets / Sanitary Facilities</label>
+        <input id="toilet" type="checkbox">
+        <div class="text_shown">Using toilets & showers at the Electric Love Festival is free of charge.</div>
+
+
+        <label class="collapse" for="valuable">Valuable Articles</label>
+        <input id="valuable" type="checkbox">
+        <div class="text_shown">You can store your valuable belongings in our lockers without having to worry about loss or theft. We ask for a small contribution for hiring.</div>
 
 
     </div>
