--- a/sites/faqSites/travel.html
+++ b/sites/faqSites/travel.html
@@ -34,7 +34,40 @@
         <div class="col-xs-4 header_back"></div>
     </div>
 
-        <div class="faq_text">
+    <label class="collapse" for="car">by Car</label>
+    <input id="car" type="checkbox">
+    <div class="text_shown">
+        <p><b>Visitors from Austria</b></p>
+        <hr>
+
+        <p><i>Autobahn (Highway) A1 from Vienna/Innsbruck/Salzburg</i><br></p>
+        Exit Thalgau – route to Hof, in the roundabout first exit direction Salzburg. From there you´ll see
+        information signs which will guide you to your destination. Please mind the different colors for the different areas.<br></p>
+
+        <p><i>Autobahn (Highway) A10 from Kärnten (Carinthia) / Italy</i><br></p>
+        <p>Exit Hallein – route to Adnet/Ebenau/Salzburgring. Just follow the road and you´ll be fine.<br></p>
+        <hr>
+        <p><b>Visitors from Germany</b><br></p>
+
+        <p>With Vignette (road tax sticker on your car, can be bought on e.g. gas stations)<br></p>
+
+        <p><i>Autobahn (Highway) A8 from Munich to Autobahn (Highway) A1 route Vienna</i><br></p>
+        <p>Exit Thalgau – route to Hof, in the roundabout first exit direction Salzburg. From there you´ll see information
+            signs which will guide you to your destination. Please mind the different colors for the different areas.<br></p>
+
+        <p>Without Vignette (road tax sticker on your car, can be bought on e.g. Gas stations)<br></p>
+
+        <p><i>Autobahn (Highway) A8 from Munich</i><br></p>
+        <p>Exit Piding – route Freilassing and further Salzburg
+            when you pass the placename sign “Salzburg” you have to drive on the B 155, further to the B1. Watch out for the information sisgns and
+            mind the different colors for the different areas.</p>
+        <hr></div>
+
+
+
+
+    <div class="faq_text">
+
             <h3 style="margin-top: 5px">CAR</h3>
             <p><b>Visitors from Austria</b></p>
 
@@ -60,6 +93,8 @@
             when you pass the placename sign “Salzburg” you have to drive on the B 155, further to the B1. Watch out for the information sisgns and
             mind the different colors for the different areas.</p>
             <hr>
+
+
             <h3 style="margin-top: 5px">PLANE</h3>
             <p>There are several direct flights from european cities to Salzburg airport. Check them out on
                 <b><a href="http://www.salzburg-airport.com/en/" style="color: #ffffff">www.salzburg-airport.com</a></b></p>
